# VQMS_Project

./: .env.copy  .gitignore  .ruff.toml  README.md  main.py  pyproject.toml  requirements.txt  sf_contacts_updated.csv.xlsx
.claude/: settings.local.json
Doc/: Flow.md
config/: agents_config.yaml  database_config.yaml  dev_config.yaml  logging_config.yaml  model_config.yaml  prod_config.yaml  test_config.yaml  tools_config.yaml
docs/references/: VQMS_Complete_Architecture_and_Flows.docx
scripts/: prepare_sf_import.py  run_email_intake.py  setup_aws.py  test_aws.py  test_aws_postgres.py  test_graph_api.py  test_postgres.py  test_redis.py
src/adapters/: graph_api.py
src/cache/: redis_client.py
src/db/: connection.py
src/db/migrations/: 001_intake_schema.sql  002_workflow_schema.sql  003_memory_schema.sql  004_audit_schema.sql  005_reporting_schema.sql
src/events/: eventbridge.py
src/models/: __init__.py  budget.py  communication.py  email.py  memory.py  messages.py  ticket.py  vendor.py  workflow.py
src/queues/: sqs.py
src/services/: email_intake.py
src/storage/: s3_client.py
src/utils/: correlation.py  helpers.py  logger.py  retry.py  validation.py
tests/: conftest.py
tests/unit/: test_correlation.py  test_email_intake.py  test_eventbridge.py  test_models.py  test_redis_client.py  test_s3_client.py  test_sqs.py
